--- a/JumpNEAT/ToniKevinYichen275/index.html
+++ b/JumpNEAT/ToniKevinYichen275/index.html
@@ -19,11 +19,11 @@
 		</div>
 		<div style="width: 720px; margin: auto;">
 			<center>
-				<p>[Abstract here]</p>
+				<p>We built an artificial bipedal character from scratch using OpenGL and ODE. The character’s motion is learned through an artificial neural network whose structure and weights are evolved using NEAT. The character was able to learn how to jump up in the air from a standing position and land back on the ground using a piece-wise fitness function to guide the evolutionary process. We implemented this in C++ and ran it in real time.</p>
 			</center>
 		</div>
 		<div style="width: 720px; margin: auto;">
-				Report (PDF)
+				<A HREF="report.pdf">Report (PDF)</A>
 		</div>
 		<div style="width: 720px; margin: auto;">
 				<A HREF="src">Source code</A>
@@ -33,7 +33,7 @@
 		</div>
 
 		<div style="width: 720px; margin: auto;">
-				<A HREF="Jumping.pdf">Presentation (PDF)</A>
+				<A HREF="presentation.pdf">Presentation (PDF)</A>
 		</div>
 		<div style="width: 720px; margin: auto;">
 				<A HREF="video/demo.html">Results</A>
